      parameters in tokens. AccessToken and RefreshToken instances will include
      them in getParameterNames() and toJSONObject().

version 11.9.1 (2024-01-06)
    * URLUtils.parseParameters must ignore illegally encoded keys and values,
      rather than throw unchecked IllegalArgumentException instances produced
      by java.net.URLDecoder.decode (iss #455).

version 11.10 (2024-02-18)
    * Adds OAuth 2.0 Rich Authorization Requests (RAR) (RFC 9396) support to
      CIBARequest.

version 11.10.1 (2024-02-26)
    * Fixes an HTTPRequest.closeStreams bug that generated an unnecessary
      java.net.ProtocolException "Cannot write output after reading input."
      (iss #458).

version 11.10.2 (2024-05-10)
    * IDTokenClaimsSet.hasRequiredClaims should use ResponseType constants (iss
      #466).
    * Updates to Nimbus JOSE+JWT 9.39
    * Updates to JSON Smart 2.5.1
    * Updates to Tink 1.13.0
    * Updates to BouncyCastle 1.78
    * Updates tests from Java 11 to Java 17 runtime.

version 11.11 (2024-05-15)
    * Adds support for the dpop_bound_access_tokens OAuth 2.0 client metadata
      parameter.
    * Updates to Nimbus JOSE+JWT 9.39.1

version 11.12 (2024-05-17)
    * Moves the getExpirationTime method from IDTokenClaimsSet to
      CommonOIDCTokenClaimsSet.
    * LogoutTokenClaimsSet and LogoutTokenValidator must support the required
      "exp" claim (iss #469).
    * Adds new LogoutTokenClaimsSet constructor that includes an "exp" claim
      argument.
    * Deprecates the LogoutTokenClaimsSet constructor that doesn't include the
      "exp" claim argument.
    * LogoutTokenValidator should accept JWS header "typ":"JWT" (iss #465).

version 11.12.1 (2024-06-25)
    * The TokenIntrospectionRequest.parse method must throw a ParseException
      when a blank token is found (iss #470).
    * Updates to Nimbus JOSE+JWT 9.40

version 11.13 (2024-06-25)
    * TypelessToken overrides equals and hashCode.
